[fix]: service icon in title aligned to top

--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -695,7 +695,6 @@ a{
 
 .services .srv-box{
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
